@@ -1,3 +1,9 @@
+1999-04-19  Michael Natterer  <mitschel@cs.tu-berlin.de>
+
+	* plug-ins/png/png.c: applied gimp-ruth-990413-0.patch. Modified
+	it to leave the image's unit untouched because png has only
+	resolution and no unit info. Fixed some unrelated warnings.
+
 Sun Apr 18 14:19:36 PDT 1999 Manish Singh <yosh@gimp.org>
 
 	* app/tools_cmds.c: new file, containes the PDB stuff for most
